--- a/Gest_Loc/Gest_Loc.csproj
+++ b/Gest_Loc/Gest_Loc.csproj
@@ -65,6 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FClient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FClient.Designer.cs">
+      <DependentUpon>FClient.cs</DependentUpon>
+    </Compile>
     <Compile Include="FListeCl.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +109,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FClient.resx">
+      <DependentUpon>FClient.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FListeCl.resx">
       <DependentUpon>FListeCl.cs</DependentUpon>
     </EmbeddedResource>
